# inference-benchmark

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: python-check.yml
benchmark/: README.md
benchmark/results/: bert.md
src/: args.py
src/bentoml_services/: README.md
src/bentoml_services/stable_diffusion/: client.py  service.py
src/mlserver_services/: README.md
src/mlserver_services/stable_diffusion/: client.py  model-settings.json  runtime.py
src/mosec_services/: bert.py  llama.py  whisper.py
src/pytriton_services/bert/: client.py  service.py
src/pytriton_services/stable_diffusion/: client.py  service.py
src/stable_diffusion/: mosec_service.py  potassium_service.py
src/stable_diffusion/triton_service/: client.py  config.pbtxt  service.py
src/triton_services/: client.py
src/triton_services/stable_diffusion/: config.pbtxt
src/triton_services/stable_diffusion/1/: model.py
